tests/paczka1/small_fuzzy/38863120.err
Error in line 3: yDv S886 7,0
Error in line 4: yDv A710 89,8
